# .dotfiles

./: .Xdefaults  .bashrc  .gitattributes  .gitignore  .npmrc  .profile  .tmux.conf  README.md  install  install.sh  lspci-k.txt  packages  pacman-packages.txt  sys-packages.txt
alacritty/: alacritty.yml  backup.yml
bspwm/: bspwmrc
dmenu/: config.def.h  config.h  config.mk  dmenu  dmenu.c  patches.def.h  patches.h  stest
dwm/: README.md  autostart.sh  colours.h  config.def.h  config.h  config.mk  dwm  dwm.c  dwm.c.orig  keys.h  patches.def.h  patches.h  tags.h
dwm-flexipatch/: autostart.sh  colours.h  config.h  config.mk  keys.h  patches.h  tags.h
dwmblocks/: blocks.h  dwmblocks  typescript
gentoo/: 6.2.6-gentoo-x86_64.config  6.2.7-gentoo-x86_64.config  6.3.8-gentoo-x86_64.config  fstab  make.conf
vim/: .vimrc  CMakeLists.txt  README.md  run-lib.test.sh  vim-install  vim-install.py  vim-plugins.txt
vim/.vim/: .netrwhist  coc-settings.json
vim/.vim/plugin/: colorscheme-config.vim  colorscheme.vim  colour.vim  commands.vim  general.vim  mappings.vim  nerdtree.vim  netrw.vim  other-configs.vim  statusline.vim  templates-config.vim
vim/.vim/plugin/appearance/: airline.vim  lightline.vim  nerdtree.vim
vim/.vim/plugin/autocompletion/: asyncomplete.vim  lsp.vim  syntastic.vim  tsu.vim
vim/.vim/plugin/trees/: netrw.vim
vim/.vim/templates/: CMakeLists.txt.template  tsx.template
vim/include/: bool.h  installer.h  list.h  node.h  user-interaction.h  utils.h
vim/src/: installer.c  list.c  main.c  node.c  useless_cxx_file.cpp  user-interaction.c  utils.c
(+176 files in other folders)
